--- a/src/main/scala/styles.css
+++ b/src/main/scala/styles.css
@@ -21,3 +21,30 @@
 .styled-table tbody tr:hover {
     background-color: #f5f5f5;
 }
+.styled-table {
+        width: 100%;
+        border-collapse: collapse;
+        border: 2px solid #f2f5f7;
+    }
+
+    .styled-table th, .styled-table td {
+        border: 1px solid #f2f5f7;
+        padding: 12px 15px;
+        text-align: left;
+    }
+
+    .styled-table th {
+        background-color: #2c3e50;
+        color: #ffffff;
+    }
+
+    .styled-table tbody tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    .styled-table tbody tr:hover {
+        background-color: #e0e0e0;
+    }
+    .bold {
+        font-weight: bold;
+    }
