--- a/src/main/scala/styles.css
+++ b/src/main/scala/styles.css
@@ -149,3 +149,19 @@ body {
     background-color: #009879;
     color: #ffffff;
 }
+
+.suggestions {
+            border: 1px solid #ccc;
+            max-height: 150px;
+            overflow-y: auto;
+            position: absolute;
+            background-color: white;
+            width: 200px;
+        }
+        .suggestion-item {
+            padding: 10px;
+            cursor: pointer;
+        }
+        .suggestion-item:hover {
+            background-color: #eee;
+        }
